create full project adding mechanism

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 <div class="projectAdder d-flex flex-row">Projects<button
                         class="nameProject btn btn-dark ml-2 py-1">+</button>
                 </div>
-                <div class="input"><input type="text" placeholder="Project name"><button
-                        class="btn btn-success">Add</button><button class="btn btn-danger nameCancel">Cancel</button>
+                <div class="input"><input type="text" placeholder="Project name" class="userInput"><button
+                        class="btn btn-success nameAdd">Add</button><button
+                        class="btn btn-danger nameCancel">Cancel</button>
                 </div>
-                <div class="projectList">
-                    <ul>
-                        <li>test</li>
-                        <li>test</li>
+                <div>
+                    <ul class="projectList">
+
                     </ul>
                 </div>
             </div>
