create divs to add to todo

--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
                     </ul>
                 </div>
             </div>
+            <div class="taskSection col-8">
+                <div class="projectTitle">Test</div>
+                <div class="allTasks">Test</div>
+            </div>
         </div>
-        <div class="col-8"></div>
-    </div>
     </div>
 
 
