--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
                 <div class="projectAdder d-flex flex-row">Projects<button
                         class="nameProject btn btn-dark ml-2 py-1">+</button>
                 </div>
-                <div class="input"><input type="text" placeholder="Project name" class="userInput"><button
-                        class="btn btn-success nameAdd">Add</button><button
-                        class="btn btn-danger nameCancel">Cancel</button>
+                <div class="projectForm">
+                    <div class="input"><input type="text" placeholder="Project name" class="userInput"><button
+                            class="btn btn-success nameAdd m-1">Add</button><button
+                            class="btn btn-danger nameCancel m-1">Cancel</button>
+                    </div>
                 </div>
                 <div>
                     <ul class="projectList">
