adjust project add styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-4 sidebar d-flex flex-column">
                 <div class="projectAdder d-flex flex-row">Projects<button
-                        class="nameProject btn btn-dark ml-2 py-1">+</button>
+                        class="nameProject btn btn-dark btn-sm ml-2 py-1">+</button>
                 </div>
                 <div class="projectForm">
                     <div class="input"><input type="text" placeholder="Project name" class="userInput"><button
